frontend/test/should_fail/index_isin_edge_same_argument_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	-e:E->;
	
	if{ isInEdgesFromIndexSame(e, fooi, "42"); }
	
	modify {
	}
}
